--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
     <!--<link rel="stylesheet" href="css/style.css">-->
 </head>
 <body>
-<h4>Oopsy woopsy! I had a lil 404 :(</h4>
-<p>not to worry, this cursed 404 page can help you get back on track.</p>
+<h4>Page Not Found.</h4>
+<p>Not to worry, this 404 page can help you get back on track.</p>
 <form>
   <input type="button" value="Return to the previous page" onclick="history.back()">
   <input type="button" value="Return to DBartleman.github.io" onclick="window.location.href = 'https://DBartleman.github.io';">
